开发环境增加静态文件目录

--- a/manifest/config/config.yaml
+++ b/manifest/config/config.yaml
@@ -6,6 +6,7 @@ server:
   accessLogEnabled:    true
   openapiPath:         "/api.json"
   swaggerPath:         "/swagger"
+  searchPaths:         "/static" 
 
 # Global logging.
 logger:
