控制WebSocket需要登录后才可连接

--- a/manifest/config/config.yaml
+++ b/manifest/config/config.yaml
@@ -24,6 +24,6 @@ database:
     stdout:  true
 
   default:
-    link:   "mysql:root:12345678@tcp(127.0.0.1:3306)/test"
+    link:   "mysql:root@tcp(127.0.0.1:3306)/gf_demo"
     debug:  true
 
