修复部分问题

--- a/manifest/config/config.prod.yaml
+++ b/manifest/config/config.prod.yaml
@@ -6,6 +6,8 @@ server:
   accessLogEnabled:    true
   openapiPath:         "/api.json"
   swaggerPath:         "/swagger"
+  cookieSameSite:      "none"
+  cookieSecure:        true
 
 # Socket Server
 socket:
